// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin Comments API Hide Can hide comments 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "likes": Any<Number>,
        "replies": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": "<p>This is a comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "replies": Array [],
      "status": "published",
    },
  ],
}
`;

exports[`Admin Comments API Hide Can hide comments 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "410",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Admin Comments API Hide Can hide comments 3: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "likes": Any<Number>,
        "replies": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "replies": Array [],
      "status": "hidden",
    },
  ],
}
`;

exports[`Admin Comments API Hide Can hide comments 4: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "385",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Admin Comments API Hide Can hide replies 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "likes": Any<Number>,
        "replies": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": "<p>This is a reply</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": null,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "replies": Array [],
      "status": "published",
    },
  ],
}
`;

exports[`Admin Comments API Hide Can hide replies 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "404",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Admin Comments API Hide Can hide replies 3: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "likes": Any<Number>,
        "replies": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": null,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "replies": Array [],
      "status": "hidden",
    },
  ],
}
`;

exports[`Admin Comments API Hide Can hide replies 4: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "381",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Admin Comments API Logged in member gets own likes via admin api can get comment liked status by impersonating member via admin browse route 1: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "x-cache-invalidate": "/api/members/comments/post/618ba1ffbe2896088840a6e1/",
  "x-powered-by": "Express",
}
`;

exports[`Admin Comments API Logged in member gets own likes via admin api can get comment liked status by impersonating member via admin get by comment id read route 1: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "x-cache-invalidate": "/api/members/comments/post/618ba1ffbe2896088840a6e1/",
  "x-powered-by": "Express",
}
`;

exports[`Admin Comments API Logged in member gets own likes via admin api can get comment liked status by impersonating member via admin get by comment replies route 1: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "x-cache-invalidate": "/api/members/comments/post/618ba1ffbe2896088840a6e1/",
  "x-powered-by": "Express",
}
`;
